# MPEO

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  RESTRUCTURE_PLAN.md  debug_mcp_api.py  main.py  mcp_config.json  mcp_fix_report.md  mcp_service_test.py  mcp_validation_report.md  mpeo.db  pyproject.toml  simple_mcp_test.py  start.sh  test_mcp_fix.db  test_mcp_fix.py  test_mpeo.db  test_system.py  todo.md
config/: AGENT_MODELS.md  README.md  agent_models.example.json  agent_models.json  agentscope_config.json  mcp_services.example.json
mpeo/: __init__.py  coordinator.py  database.py  executor.py  interface.py  models.py  output.py  planner.py
mpeo/core/: __init__.py  cli.py  container.py  coordinator.py  events.py  executor.py  executor_agentscope.py  output.py  planner.py  planner_helpers.py
mpeo/examples/: mcp_service_example.py
mpeo/interfaces/: __init__.py  cli.py  command_handlers.py
mpeo/models/: __init__.py  agent_config.py  config.py  session.py  task.py
mpeo/services/: __init__.py  agentscope_mcp_adapter.py  configuration_loader.py  database.py  mcp_client.py  mcp_common.py  mcp_manager.py  optimized_mcp_manager.py  unified_mcp_manager.py
mpeo/utils/: __init__.py  config.py  exceptions.py  logging.py  paths.py
scripts/: update_imports.py
