[project]
name = "mpeo"
version = "0.1.0"
description = "Multi-model collaborative task processing system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "networkx>=3.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
